Changes for 1.8.3

 - [ZBXNEXT-58] added zabbix[{history_log,history_text,history_uint,trends_uint}] internal checks (asaveljevs)
 - [ZBX-2446] fixed compilation on AIX 5.3 with OS level 5300-05 or earlier (Sasha)
 - [ZBX-2027] fixed selecting wrong host after canceling trigger comment (Vedmak)
 - [ZBX-2253] fixed delete confirmation dialog refer to empty element (Vedmak)
 - [ZBX-2370] fixed duration value in monitoring events for multiple problem triggers (Vedmak)
 - [ZBX-507] made UserParameters work with zabbix_agent(d) -p and -t (asaveljevs)
 - [ZBX-2326] fixed dynamic chart titles now all symbols rendered correcly (Maxim Andruhovich / AM)
 - [ZBX-2250] value mapping is now applied for {ITEM.LASTVALUE} macro inside triggers description (Vedmak)
 - [ZBX-1436] fixed trigger events display after next steps  monitoring -> triggers -> click on any event time (Maxim Andruhovich / AM)
 - [ZBX-1532] added screen name to visual screen editing form (when adding screen rows and cols) (Maxim Andruhovich / AM)
 - [ZBX-2438] fixed configuration of ssh2 on FreeBSD. Thanks to Alex Deiter (asaveljevs)
 - [ZBX-2423] added custom color input for link elements (Vedmak)
 - [ZBX-2100] fixed group with templates but without hosts breaks map editing issue (Aly)
 - [ZBX-1591] fixed "advanced icons" for image type map elements (Aly)
 - [ZBX-1882] fixed selecting items from disabled hosts for graphs (Aly)
 - [ZBX-1126] fixed large numbers processing for values stored as 'Delta' (Sasha)
 - [ZBXNEXT-241] extended proxy screen to show proxy vps and item count (Vedmak)
 - [DEV-460] improved host-group and maps icons info in zabbix maps (Aly)
 - [ZBX-2379] fixed trigger expression editing with trigger builder (Maxim Andruhovich/AM)
 - [ZBXNEXT-338] added caching of eventid's (Sasha)
 - [ZBX-1438] fixed not deleting data from trends_uint table when delete item (Vedmak)
 - [ZBX-2276] fixed dashboard discovery status header (Aly)